--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
         </div>
       </nav>
     </header>
+    <main class="l-main">
+      <section class="home" id="home">
+        <div class="home__container bd-grid">
+          <div class="home__data">
+            <div class="home__img">
+              <img src="assets/img/profile.png" alt="Profile" />
+            </div>
+            <h1 class="home__title">Filipe Teixeira</h1>
+            <span class="home__profession">Web developer</span>
+            <div class="home__social">
+              <a href="#" class="home__social-link">
+                <i class="bx bxl-linkedin"></i>
+              </a>
+              <a href="#" class="home__social-link">
+                <i class="bx bxl-gmail"></i>
+              </a>
+              <a href="#" class="home__social-link">
+                <i class="bx bxl-github"></i>
+              </a>
+            </div>
+            <a download="" href="#" class="button home__button"
+              >Download Resume</a
+            >
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
