chore: added about section element structure

--- a/index.html
+++ b/index.html
@@ -79,6 +79,67 @@
           </div>
         </div>
       </section>
+      <section class="about section" id="about">
+        <span class="section-subtitle">My intro</span>
+        <h2 class="section-title">About me</h2>
+        <div class="about__container bd-grid">
+          <div class="about__data">
+            <p class="about__description">
+              Hi, i am a web developer passionate about creating and developing
+              web interfaces. I have a couple years of experience in this area
+              of work, with multiple quality projects.
+            </p>
+            <img src="assets/img/about.jpeg" alt="Aboutme" class="about__img" />
+          </div>
+          <div>
+            <div class="about__information">
+              <h3 class="about__information-title">Information</h3>
+              <div class="about__information-data">
+                <i class="bx bx-user about__information-icon"></i>
+                <span>Filipe Teixeira</span>
+              </div>
+              <div class="about__information-data">
+                <i class="bx bx-phone about__information-icon"></i>
+                <span>+55 (71) 99152-0664</span>
+              </div>
+              <div class="about__information-data">
+                <i class="bx bx-envelope about__information-icon"></i>
+                <span>filipebteixeira98@gmail.com</span>
+              </div>
+            </div>
+            <div class="about__information">
+              <h3 class="about__information-title">Experience and support</h3>
+              <div class="about__information-data">
+                <i class="bx bx-medal about__information-icon"></i>
+                <div>
+                  <span class="about__information-subtitle">1 Year Job</span>
+                  <span class="about__information-subtitle-small"
+                    >Experience</span
+                  >
+                </div>
+              </div>
+              <div class="about__information-data">
+                <i class="bx bx-briefcase about__information-icon"></i>
+                <div>
+                  <span class="about__information-subtitle">50+ Projects</span>
+                  <span class="about__information-subtitle-small"
+                    >Completed</span
+                  >
+                </div>
+              </div>
+              <div class="about__information-data">
+                <i class="bx bx-support about__information-icon"></i>
+                <div>
+                  <span class="about__information-subtitle">Support</span>
+                  <span class="about__information-subtitle-small"
+                    >Online 24/7</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="assets/js/main.js"></script>
   </body>
