chore: added skills section element structure

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <div class="about__information-data">
                 <i class="bx bx-medal about__information-icon"></i>
                 <div>
-                  <span class="about__information-subtitle">1 Year Job</span>
+                  <span class="about__information-subtitle">1 Year job</span>
                   <span class="about__information-subtitle-small"
                     >Experience</span
                   >
@@ -136,6 +136,48 @@
                   >
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="skills section" id="skills">
+        <span class="section-subtitle">Why choose me</span>
+        <h2 class="section-title">My expertise area</h2>
+        <div class="skills__container bd-grid">
+          <div class="skills__content">
+            <h3 class="skills__subtitle">Frontend</h3>
+            <div class="skills__data">
+              <span class="skills__name">HTML5/CSS3</span>
+              <span class="skills__number">80%</span>
+              <span class="skills__bar skills__html"></span>
+            </div>
+            <div class="skills__data">
+              <span class="skills__name">Javascript</span>
+              <span class="skills__number">70%</span>
+              <span class="skills__bar skills__js"></span>
+            </div>
+            <div class="skills__data">
+              <span class="skills__name">ReactJS</span>
+              <span class="skills__number">60%</span>
+              <span class="skills__bar skills__react"></span>
+            </div>
+          </div>
+          <div class="skills__content">
+            <h3 class="skills__subtitle">Backend</h3>
+            <div class="skills__data">
+              <span class="skills__name">Node.js</span>
+              <span class="skills__number">75%</span>
+              <span class="skills__bar skills__node"></span>
+            </div>
+            <div class="skills__data">
+              <span class="skills__name">Firebase</span>
+              <span class="skills__number">50%</span>
+              <span class="skills__bar skills__firebase"></span>
+            </div>
+            <div class="skills__data">
+              <span class="skills__name">Elixir</span>
+              <span class="skills__number">25%</span>
+              <span class="skills__bar skills__elixir"></span>
             </div>
           </div>
         </div>
