--- a/index.html
+++ b/index.html
@@ -182,6 +182,58 @@
           </div>
         </div>
       </section>
+      <section class="education section" id="education">
+        <span class="section-subtitle">Qualification</span>
+        <h2 class="section-title">My education</h2>
+        <div class="education__container bd-grid">
+          <div class="education__content">
+            <div>
+              <h3 class="education__year">2013 - 2015</h3>
+              <span class="education__university">Franciscano Santa Clara</span>
+            </div>
+            <div class="education__time">
+              <span class="education__rounder"></span>
+              <span class="education__line"></span>
+            </div>
+            <div>
+              <h3 class="education__race">High school degree</h3>
+              <span class="education__university">High school</span>
+            </div>
+          </div>
+          <div class="education__content">
+            <div>
+              <h3 class="education__year">2016 - ?</h3>
+              <span class="education__university"
+                >Universidade do Estado da Bahia (UNEB)</span
+              >
+            </div>
+            <div class="education__time">
+              <span class="education__rounder"></span>
+              <span class="education__line"></span>
+            </div>
+            <div>
+              <h3 class="education__race">Diploma</h3>
+              <span class="education__university">Information Systems</span>
+            </div>
+          </div>
+          <div class="education__content">
+            <div>
+              <h3 class="education__year">2020 - 2022</h3>
+              <span class="education__university">Rocketseat</span>
+            </div>
+            <div class="education__time">
+              <span class="education__rounder"></span>
+              <span class="education__line"></span>
+            </div>
+            <div>
+              <h3 class="education__race">
+                Certificate of Programming Development
+              </h3>
+              <span class="education__university">Full-Stack</span>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="assets/js/main.js"></script>
   </body>
