chore: changed education info

--- a/index.html
+++ b/index.html
@@ -197,23 +197,21 @@
             </div>
             <div>
               <h3 class="education__race">High school degree</h3>
-              <span class="education__university">High school</span>
+              <span class="education__specialty">High School</span>
             </div>
           </div>
           <div class="education__content">
             <div>
               <h3 class="education__year">2016 - ?</h3>
-              <span class="education__university"
-                >Universidade do Estado da Bahia (UNEB)</span
-              >
+              <span class="education__university">UNEB</span>
             </div>
             <div class="education__time">
               <span class="education__rounder"></span>
               <span class="education__line"></span>
             </div>
             <div>
-              <h3 class="education__race">Diploma</h3>
-              <span class="education__university">Information Systems</span>
+              <h3 class="education__race">Bachelor's degree</h3>
+              <span class="education__specialty">Information Systems</span>
             </div>
           </div>
           <div class="education__content">
@@ -226,10 +224,8 @@
               <span class="education__line"></span>
             </div>
             <div>
-              <h3 class="education__race">
-                Certificate of Programming Development
-              </h3>
-              <span class="education__university">Full-Stack</span>
+              <h3 class="education__race">GoStack certificate</h3>
+              <span class="education__specialty">Full-Stack Development</span>
             </div>
           </div>
         </div>
