chore: added services section element structure

--- a/index.html
+++ b/index.html
@@ -230,6 +230,60 @@
           </div>
         </div>
       </section>
+      <section class="services section" id="services">
+        <span class="section-subtitle">What i offer</span>
+        <h2 class="section-title">My services</h2>
+        <div class="services__container bd-grid">
+          <div class="services__content">
+            <i class="bx bx-code services__icon"></i>
+            <h3 class="services__title">Web design</h3>
+            <p class="services__description">
+              This service that i offer is of high quality, and above all
+              experience that i have in the labor field for a couple years
+            </p>
+          </div>
+          <div class="services__content">
+            <i class="bx bx-pen services__icon"></i>
+            <h3 class="services__title">Graphic design</h3>
+            <p class="services__description">
+              This service that i offer is of high quality, and above all
+              experience that i have in the labor field for a couple years
+            </p>
+          </div>
+          <div class="services__content">
+            <i class="bx bx-brush services__icon"></i>
+            <h3 class="services__title">UI/UX</h3>
+            <p class="services__description">
+              This service that i offer is of high quality, and above all
+              experience that i have in the labor field for a couple years
+            </p>
+          </div>
+          <div class="services__content">
+            <i class="bx bx-server services__icon"></i>
+            <h3 class="services__title">Backend development</h3>
+            <p class="services__description">
+              This service that i offer is of high quality, and above all
+              experience that i have in the labor field for a couple years
+            </p>
+          </div>
+          <div class="services__content">
+            <i class="bx bx-pencil services__icon"></i>
+            <h3 class="services__title">Creative process</h3>
+            <p class="services__description">
+              This service that i offer is of high quality, and above all
+              experience that i have in the labor field for a couple years
+            </p>
+          </div>
+          <div class="services__content">
+            <i class="bx bx-mobile services__icon"></i>
+            <h3 class="services__title">Interface movil</h3>
+            <p class="services__description">
+              This service that i offer is of high quality, and above all
+              experience that i have in the labor field for a couple years
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="assets/js/main.js"></script>
   </body>
