--- a/index.html
+++ b/index.html
@@ -284,6 +284,26 @@
           </div>
         </div>
       </section>
+      <section class="project section">
+        <div class="project__container bd-grid">
+          <div class="project__data">
+            <h2 class="section-title project__title">
+              Do you have a project in mind?
+            </h2>
+            <p class="project__description">
+              If you have a project that you want to carry out, do not hesitate
+              and tell me what it is, and what services i can offer you, contact
+              me directly here.
+            </p>
+            <a href="#contact" class="button button__light">Contact me</a>
+          </div>
+          <img
+            src="assets/img/projectmind.png"
+            alt="Project mind"
+            class="project__img"
+          />
+        </div>
+      </section>
     </main>
     <script src="assets/js/main.js"></script>
   </body>
